<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="_0">0</string>
    <string name="_0mhz">0MHZ</string>
    <string name="_100">100%</string>
    <string name="action_settings">Setting</string>
    <string name="advance_search">Advanced Search</string>
    <string name="advance_search_tips">请输入搜索频率（单位：MHz）</string>
    <string name="advance_text">按频率搜索</string>
    <string name="ant_tips">使用外接天线，或者换个地方再试！</string>
    <string name="australia">Australia</string>
    <string name="bridge_home">桥接模式</string>
    <string name="bridge_home2">桥接模式\n(已连接)</string>
    <string name="bridge_next">桥接模式</string>
    <string name="bridge_pwd_trips">桥接AP 密码:</string>
    <string name="bridge_ssid_blank_trips">桥接AP SSID 不能为空</string>
    <string name="bridge_ssid_trips">桥接AP SSID:</string>
    <string name="bridge_temp">暂不支持该选项</string>
    <string name="bridge_temp2">请重新连接热点</string>
    <string name="bridged_ssid_trips">当前桥接AP SSID:</string>
    <string name="bridged_title">桥接模式配置更改</string>
    <string name="bridged_trips1">网络配置更改中，请稍后</string>
    <string name="bridged_trips2">设备网络配置已修改，请重新连接\n如果桥接失败，网络配置将会重置</string>
    <string name="cancel">取消</string>
    <string name="cancel_top">取消置顶</string>
    <string name="cancel_update">将跳过更新</string>
    <string name="canceltop">取消置顶</string>
    <string name="channels">ch</string>
    <string name="check_down">连接设备失败，请检查手机是否连接到设备！</string>
    <string name="check_upda_fm_su">检查到可更新的固件</string>
    <string name="check_update_trips">检查更新</string>
    <string name="chengdu_weishi">威视码电子</string>
    <string name="chinese">简体中文</string>
    <string name="company_name">易而达科技</string>
    <string name="confirm">确定</string>
    <string name="connect">连接</string>
    <string name="connect_now">现在去连接！</string>
    <string name="connect_update_server_fail">连接更新服务器失败，将跳过更新</string>
    <string name="connected">设备已连接！</string>
    <string name="connectfail">连接设备失败，请检查手机是否连接到设备wifi！</string>
    <string name="connecting">正在连接</string>
    <string name="connectsuccess">成功连接到设备！</string>
    <string name="crash_tips">Sorry!The application occurs a exception,it has to quit!</string>
    <string name="currfreq">当前频率</string>
    <string name="def">默认</string>
    <string name="delete">删除</string>
    <string name="deleteconfirm">节目列表已被删除！</string>
    <string name="deletecontent">删除节目列表将不可恢复！</string>
    <string name="deletetips">您确定吗？</string>
    <string name="detect_wifi">检测到手机没有连接到设备wifi</string>
    <string name="device">设备</string>
    <string name="device_uncorrect">设备类型不匹配，将跳过更新！</string>
    <string name="device_wait">正在连接设备，请稍后…</string>
    <string name="disconnect">设备未连接！</string>
    <string name="disconnecttips">设备已断开连接，请检查是否已连接到设备wifi！</string>
    <string name="downl_fail">固件下载失败，将跳过更新</string>
    <string name="downl_succ">固件下载成功</string>
    <string name="downling_fr">正在下载最新版固件…</string>
    <string name="drawer_close">close</string>
    <string name="drawer_open">open</string>
    <string name="dvb_mode">DVB-T/T2</string>
    <string name="dvb_region">请选择所在国家</string>
    <string name="dvb_t_t2">DVB-T/T2</string>
    <string name="edit_program_list">edit_program_list</string>
    <string name="empty_program_list">确定清空节目列表？</string>
    <string name="encrypt_tips">抱歉，该节目已加密，无法播放！</string>
    <string name="english">English</string>
    <string name="enjoy">享受您的免费电视之旅!</string>
    <string name="enter_name">请输入节目名</string>
    <string name="epg">EPG Information</string>
    <string name="epg_tip">There is no Epg Information!</string>
    <string name="europe">Europe</string>
    <string name="firmware_version">固件版本</string>
    <string name="foundchannel">已获取节目:</string>
    <string name="fr_size">\n大小：</string>
    <string name="fr_type">\n固件类型： </string>
    <string name="fr_version">\n版本：</string>
    <string name="freq">Please Input the frequency point （Units:KHz）</string>
    <string name="freqtips">无效频点，请重新输入！</string>
    <string name="functionlab">功能实验室</string>
    <string name="guide">Program Guide</string>
    <string name="harddecodeerror">硬解码失败，将自动切换至软解码…</string>
    <string name="hardware">HW</string>
    <string name="hardware1">HW</string>
    <string name="hardwaredecode">硬件解码</string>
    <string name="hw_trips">暂不支持硬件解码</string>
    <string name="i2c_error">USB芯片已挂起，请重启电视宝！</string>
    <string name="isdbt">ISDBT</string>
    <string name="isdbt_mde">ISDBT</string>
    <string name="language">语言</string>
    <string name="lock_frequency">锁定频点</string>
    <string name="minilist_label">节目列表</string>
    <string name="move">移动</string>
    <string name="next">下一步</string>
    <string name="no">否</string>
    <string name="no_channnel">没有节目!</string>
    <string name="no_signal_tips">无信号！</string>
    <string name="nochannletips">没有扫描到节目，换个地方试试吧！!</string>
    <string name="noepgtrip">无节目信息</string>
    <string name="nolock">无</string>
    <string name="nolockfreq">当前无锁定频率</string>
    <string name="ok">好</string>
    <string name="open_wifi">打开Wifi</string>
    <string name="playing">Playing</string>
    <string name="pm_2_30">PM 2:30</string>
    <string name="poweroff">退出后，记得关闭电视宝设备的电源哟！</string>
    <string name="program">节目列表</string>
    <string name="program_guide">Program Guide</string>
    <string name="programguide">Program Guide</string>
    <string name="qam">调制方式 :</string>
    <string name="qam_type">调制方式</string>
    <string name="quality">信号质量</string>
    <string name="quit_app_tips">再按一次，退出程序</string>
    <string name="quittitle">退出播放器？</string>
    <string name="radio">Radio</string>
    <string name="radio_tips">There is no Radio Program</string>
    <string name="ratio">16:9</string>
    <string name="ready_update">准备固件更新</string>
    <string name="record_error">录像失败</string>
    <string name="record_finish">保存录像文件到:</string>
    <string name="record_label">录像</string>
    <string name="refresh_button_tips">click to refresh</string>
    <string name="rename">重命名</string>
    <string name="russian">Русский</string>
    <string name="scan">正在扫描</string>
    <string name="scan_immed">立即扫描</string>
    <string name="scan_tips">The DataBase does not hava Program,Please Press the Button on the top right corner to capture the Program!</string>
    <string name="scan_tips_earda">The DataBase does not hava Program,Please Press the Button on the top left corner to capture the Program!</string>
    <string name="scaning">正在扫描…</string>
    <string name="scantips">再按一次，退出扫描</string>
    <string name="screen_lock_trips">已锁定屏幕</string>
    <string name="screen_unlock_trips">已解锁屏幕</string>
    <string name="search">Search</string>
    <string name="search_all">全频段搜索</string>
    <string name="search_button">点击搜索</string>
    <string name="search_tips">Do you want to Search Again？</string>
    <string name="search_toolbar">action_search</string>
    <string name="searchall">Search</string>
    <string name="searchall_tips">（原有节目全部清零）</string>
    <string name="select_mode">请选择电视制式</string>
    <string name="server_fail">服务器无法接收固件，将跳过更新</string>
    <string name="setting">设置</string>
    <string name="setting_menu">setting_menu</string>
    <string name="settop">置顶</string>
    <string name="signal_strength_show">信号强度 :</string>
    <string name="signal_weak">信号太弱，无法播放！</string>
    <string name="signalstatus">信号状态</string>
    <string name="signalstrength">信号强度</string>
    <string name="sofewaredecodetip">软件解码</string>
    <string name="software">SW</string>
    <string name="softwaredecode">SW</string>
    <string name="standard">制式标准</string>
    <string name="stop_play_tips">Try again to quit play</string>
    <string name="stop_record_label">停止录像</string>
    <string name="switch_success">切换成功</string>
    <string name="switching">正在切换节目，请稍等！</string>
    <string name="tevemo">TEVEMO</string>
    <string name="time">20:35</string>
    <string name="top">置顶</string>
    <string name="tv">tv</string>
    <string name="unconnect_device">设备无响应，请重启设备</string>
    <string name="update_fail">固件更新失败，错误码：</string>
    <string name="update_fm">固件更新</string>
    <string name="update_or_not">\n是否更新？</string>
    <string name="update_succ">固件已经更新到最新版本</string>
    <string name="update_wifi_reque">更新固件需要连接到设备的wifi，是否连接？</string>
    <string name="upload_fail">上传过程中发生未知错误，将跳过更新</string>
    <string name="uploading_fr">正在上传固件…</string>
    <string name="verify_fail">校验失败，将跳过更新</string>
    <string name="verify_fr">固件校验失败，将跳过更新</string>
    <string name="verify_server_fail">更新服务器验证失败，将跳过更新</string>
    <string name="verify_succ">固件校验成功，开始固件更新</string>
    <string name="version_name">版本号：</string>
    <string name="videocode">编码方式：</string>
    <string name="wait">等待</string>
    <string name="welcome">感谢您使用我们的地面数字电视播放器！</string>
    <string name="wifi_enable_trips">保留原AP模式</string>
    <string name="wifi_err_tips">无法打开wifi设置页面，请退出程序，并手动连接到设备wifi</string>
    <string name="wifi_passwd_blank_trips">AP密码长度不能小于8</string>
    <string name="wifi_pwd_tirps">AP 密码:</string>
    <string name="wifi_requ_repeat">未能连接到设备wifi，是否重试？</string>
    <string name="wifi_ssid_blank_trips">AP SSID 不能为空</string>
    <string name="wifi_ssid_trips">AP SSID:</string>
    <string name="yes">是</string>
    <string name="app_name">library</string>
    <string name="connect_to_device">连接到设备WIFI</string>
    <string name="connect_trips">当前未连接到设备WIFI，是否跳转到连接设备WIFI</string>
    <string name="function_lab">功能实验室</string>
    <string name="function_lab_trips">实验性功能预览，重启APP后生效</string>
    <string name="lab_fun_bridge">桥接模式</string>
    <string name="lab_fun_codec">视频编码显示</string>
    <string name="lab_fun_epg">EPG显示</string>
    <string name="lab_fun_record">录像功能</string>
    <string name="lab_fun_signal">信号强度显示</string>
    <string name="lab_fun_support_all">取消WIFI名验证</string>
    <string name="lab_fun_support_old">支持更多的WIFI名</string>
    <string name="update_cancel">取消</string>
    <string name="update_check_confirm">\n\n是否进行更新?</string>
    <string name="update_check_confirm2">\n\n进行更新?(否则退出程序)</string>
    <string name="update_check_error_trips">检查错误，错误码</string>
    <string name="update_check_info">\n更新信息:\n</string>
    <string name="update_check_latest_version_trips">\n最新固件版本:</string>
    <string name="update_check_packet_size">\n更新包大小:</string>
    <string name="update_check_title">\n有新版本固件可更新</string>
    <string name="update_check_version_trips">\n当前固件版本:</string>
    <string name="update_confirm">确认</string>
    <string name="update_connect_unknown_trips">未知原因导致无法登陆设备,是否重试？</string>
</resources>