<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res-auto" app:background="@color/grey400" app:fitsSystemWindows="true" app:layout_width="match_parent" app:layout_height="match_parent">
    <com.eardatek.special.player.widget.CustomToolbar app:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" app:id="@+id/toolbar_scan" app:background="@color/app_background" app:layout_width="match_parent" app:layout_height="wrap_content" app:minHeight="?attr/actionBarSize" app:title="@string/scaning" app:navigationIcon="@drawable/back" />
    <FrameLayout app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_width="wrap_content" app:layout_height="wrap_content">
        <com.eardatek.special.player.widget.ProgressWheel app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/scan_progreswheel" app:layout_width="UNKNOWN_DATA_0xfa01" app:layout_height="UNKNOWN_DATA_0xfa01" app:barColor="@color/cpb_blue_dark" app:rimColor="@color/grey600" app:rimWidth="8dp" app:barWidth="8dp" app:contourColor="@color/transparent" />
        <LinearLayout app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:orientation="horizontal" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="50dp">
            <TextView app:textSize="45sp" app:textColor="@color/cpb_blue_dark" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/found_channels" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/_0" />
            <TextView app:textSize="25sp" app:textColor="@color/cpb_blue_dark" app:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" app:id="@+id/found_channels_text" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/channels" />
        </LinearLayout>
        <View app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:background="@color/cpb_blue_dark" app:layout_width="UNKNOWN_DATA_0xc801" app:layout_height="UNKNOWN_DATA_0x401" />
        <TextView app:textSize="30sp" app:textColor="@color/cpb_blue_dark" app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/scan_freq" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginBottom="60dp" app:text="@string/_0mhz" />
    </FrameLayout>
</FrameLayout>
