<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res-auto" app:background="@color/grey400" app:layout_width="match_parent" app:layout_height="match_parent">
    <LinearLayout app:orientation="vertical" app:layout_width="match_parent" app:layout_height="wrap_content">
        <com.eardatek.special.player.widget.CustomToolbar app:id="@+id/toolbar_setting" app:background="@color/app_background" app:layout_width="match_parent" app:layout_height="wrap_content" app:minHeight="?attr/actionBarSize" app:title="@string/setting" app:navigationIcon="@drawable/back" />
        <TextView app:textSize="@dimen/setting_language" app:textColor="@color/white" app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="10dp" app:text="@string/language" />
        <View app:background="#8d8d8d" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x101" app:layout_marginTop="10dp" />
        <FrameLayout app:padding="@dimen/setting_padding" app:layout_width="match_parent" app:layout_height="wrap_content">
            <TextView app:textSize="@dimen/setting_china" app:textColor="@color/app_background" app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/china_text" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginLeft="10dp" app:text="@string/chinese" />
            <com.kyleduo.switchbutton.SwitchButton app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/def_switchbtn" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginRight="10dp" app:kswThumbColor="@color/white" app:kswThumbWidth="20dp" app:kswThumbHeight="20dp" app:kswThumbRadius="20dp" app:kswBackColor="@color/grey700" app:kswBackMeasureRatio="2.3" />
        </FrameLayout>
        <FrameLayout app:padding="@dimen/setting_padding" app:layout_width="match_parent" app:layout_height="wrap_content">
            <TextView app:textSize="@dimen/setting_english" app:textColor="@color/white" app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/english_text" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginLeft="10dp" app:text="@string/english" />
            <com.kyleduo.switchbutton.SwitchButton app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/english_switchbtn" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginRight="10dp" app:checked="false" app:kswThumbColor="@color/white" app:kswThumbWidth="20dp" app:kswThumbHeight="20dp" app:kswThumbRadius="20dp" app:kswBackColor="@color/grey700" app:kswBackMeasureRatio="2.3" />
        </FrameLayout>
        <FrameLayout app:padding="@dimen/setting_padding" app:layout_width="match_parent" app:layout_height="wrap_content">
            <TextView app:textSize="@dimen/setting_english" app:textColor="@color/white" app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/russian_text" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginLeft="10dp" app:text="@string/russian" />
            <com.kyleduo.switchbutton.SwitchButton app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/russian_switchbtn" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginRight="10dp" app:checked="false" app:kswThumbColor="@color/white" app:kswThumbWidth="20dp" app:kswThumbHeight="20dp" app:kswThumbRadius="20dp" app:kswBackColor="@color/grey700" app:kswBackMeasureRatio="2.3" />
        </FrameLayout>
        <View app:background="#8d8d8d" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x201" app:layout_marginTop="10dp" />
        <TextView app:textSize="@dimen/setting_language" app:textColor="@color/white" app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="10dp" app:text="@string/device" />
        <View app:background="#8d8d8d" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x101" app:layout_marginTop="10dp" />
        <FrameLayout app:layout_width="match_parent" app:layout_height="wrap_content">
            <TextView app:textSize="@dimen/setting_standard" app:textColor="@color/white" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/tv_type" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginLeft="20dp" app:layout_marginTop="@dimen/setting_padding" app:text="@string/standard" />
            <TextView app:textSize="@dimen/setting_signal_status" app:textColor="@color/white" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/tv_type_text" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="10dp" app:layout_marginRight="20dp" />
        </FrameLayout>
        <View app:background="#8d8d8d" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x101" app:layout_marginTop="10dp" />
        <FrameLayout app:layout_width="match_parent" app:layout_height="wrap_content">
            <TextView app:textSize="@dimen/setting_standard" app:textColor="@color/white" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/tv_firmware_version" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginLeft="20dp" app:layout_marginTop="@dimen/setting_padding" app:text="@string/firmware_version" />
            <TextView app:textSize="@dimen/setting_signal_status" app:textColor="@color/white" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/tv_firmware_version_text" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="10dp" app:layout_marginRight="20dp" />
        </FrameLayout>
        <View app:background="#8d8d8d" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x201" app:layout_marginTop="10dp" />
        <TextView app:textSize="20sp" app:textColor="@color/white" app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_width="match_parent" app:layout_height="wrap_content" app:layout_marginTop="@dimen/setting_padding" app:text="@string/signalstatus" />
        <View app:background="#8d8d8d" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x101" app:layout_marginTop="10dp" />
        <FrameLayout app:layout_width="match_parent" app:layout_height="wrap_content">
            <TextView app:textSize="@dimen/setting_standard" app:textColor="@color/white" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/tv_lock_frequency_label" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginLeft="20dp" app:layout_marginTop="@dimen/setting_padding" app:text="@string/lock_frequency" />
            <TextView app:textSize="@dimen/setting_signal_status" app:textColor="@color/white" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/current_freq" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="10dp" app:layout_marginRight="20dp" />
        </FrameLayout>
        <View app:background="#8d8d8d" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x101" app:layout_marginTop="10dp" />
        <FrameLayout app:layout_width="match_parent" app:layout_height="wrap_content">
            <TextView app:textSize="@dimen/setting_standard" app:textColor="@color/white" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/tv_qam_label" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginLeft="20dp" app:layout_marginTop="@dimen/setting_padding" app:text="@string/qam_type" />
            <TextView app:textSize="@dimen/setting_signal_status" app:textColor="@color/white" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/text_qam" app:layout_width="wrap_content" app:layout_height="wrap_content" app:layout_marginTop="10dp" app:layout_marginRight="20dp" />
        </FrameLayout>
        <View app:background="#8d8d8d" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x101" app:layout_marginTop="10dp" />
        <FrameLayout app:padding="10dp" app:layout_width="match_parent" app:layout_height="wrap_content">
            <LinearLayout app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:orientation="vertical" app:layout_width="wrap_content" app:layout_height="wrap_content">
                <FrameLayout app:padding="10dp" app:paddingTop="@dimen/setting_padding" app:layout_width="wrap_content" app:layout_height="wrap_content">
                    <com.eardatek.special.player.widget.ProgressWheel app:id="@+id/signal_strength_progreswheel" app:layout_width="UNKNOWN_DATA_0x7f08000f" app:layout_height="UNKNOWN_DATA_0x7f08000e" app:layout_marginLeft="@dimen/setting_margin" app:layout_marginRight="@dimen/setting_margin" app:barColor="@color/cpb_blue_dark" app:rimColor="@color/grey600" app:rimWidth="8dp" app:barWidth="8dp" app:contourColor="@color/transparent" />
                    <TextView app:textSize="@dimen/setting_signal_strength_percent" app:textColor="@color/cpb_blue_dark" app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/text_signal_strength" app:layout_width="wrap_content" app:layout_height="wrap_content" />
                </FrameLayout>
                <TextView app:textSize="@dimen/setting_signal_strength" app:textColor="@color/app_background" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/signal_strengh_tip" app:padding="8dp" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/signalstrength" />
            </LinearLayout>
            <LinearLayout app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:orientation="vertical" app:layout_width="wrap_content" app:layout_height="wrap_content">
                <FrameLayout app:padding="10dp" app:layout_width="wrap_content" app:layout_height="wrap_content">
                    <TextView app:textSize="@dimen/setting_signal_strength_percent" app:textColor="@color/cpb_blue_dark" app:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/text_quality" app:layout_width="wrap_content" app:layout_height="wrap_content" />
                    <com.eardatek.special.player.widget.ProgressWheel app:id="@+id/freq_quality_progressWheel" app:layout_width="UNKNOWN_DATA_0x7f08000f" app:layout_height="UNKNOWN_DATA_0x7f08000e" app:layout_marginLeft="@dimen/setting_margin" app:layout_marginRight="@dimen/setting_margin" app:barColor="@color/cpb_blue_dark" app:rimColor="@color/grey600" app:rimWidth="8dp" app:barWidth="8dp" app:contourColor="@color/transparent" />
                </FrameLayout>
                <TextView app:textSize="@dimen/setting_signal_strength" app:textColor="@color/app_background" app:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" app:id="@+id/signal_quality_text" app:padding="8dp" app:layout_width="wrap_content" app:layout_height="wrap_content" app:text="@string/quality" />
            </LinearLayout>
        </FrameLayout>
        <View app:background="#8d8d8d" app:layout_width="match_parent" app:layout_height="UNKNOWN_DATA_0x201" app:layout_marginTop="10dp" />
        <Button app:textSize="15sp" app:id="@+id/function_lab" app:visibility="invisible" app:layout_width="match_parent" app:layout_height="wrap_content" app:text="@string/functionlab" app:textAllCaps="false" />
    </LinearLayout>
</ScrollView>
